--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,3 +7,4 @@
 @import "./components/faq";
 @import "./components/footer";
 @import "./components/availability";
+@import "./components/advantages";
