--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,12 @@
 @import "./base/_utils";
-
 @import "./base/variables";
 @import "./components/header";
 @import "./components/hero";
 @import "./components/services";
 @import "./components/faq";
 @import "./components/footer";
-@import "./components/availability";
 @import "./components/advantages";
+@import "./components/contact";
+@import "./components/values";
+@import "./components/payment";
+@import "./components/reviews";
