--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ img {
   text-transform: uppercase;
   font-weight: 900;
   font-size: 32px;
-  margin: 0 0 60px 0;
+  margin: 0 0 30px 0;
 }
 
 .section-title--gradient {
@@ -62,11 +62,19 @@ img {
   -webkit-text-fill-color: transparent;
 }
 
+.section-title--white {
+  color: var(--secondary-text-color);
+}
+
 .section-subtitle {
   font-size: 16px;
   text-transform: uppercase;
   color: var(--primary-text-color);
   font-weight: 700;
+}
+
+.section-subtitle--blue {
+  color: var(--accent-color);
 }
 
 .services-content__button {
@@ -124,6 +132,8 @@ img {
   white-space: nowrap;
   cursor: pointer;
   transition: color var(--timing-function), background-color var(--timing-function), background var(--timing-function);
+  height: max-content;
+  width: max-content;
 }
 
 .button--transparent {
@@ -650,6 +660,7 @@ input[type=radio] {
 .services-cards__list {
   display: flex;
   justify-content: space-between;
+  gap: 30px;
   margin-bottom: 60px;
 }
 
@@ -802,6 +813,7 @@ input[type=radio] {
   left: 0;
   right: 0;
   bottom: 0;
+  margin-top: 100px;
   position: absolute;
   pointer-events: none;
 }
@@ -906,7 +918,7 @@ input[type=radio] {
 
 .footer__subtitle {
   font-family: var(--title-font);
-  font-style: 14px;
+  font-size: 16px;
   font-weight: 700;
   color: var(--secondary-text-color);
 }
@@ -1007,6 +1019,7 @@ input[type=radio] {
 .footer-payment > .footer__subtitle {
   width: 70px;
   align-items: center;
+  font-size: 14px;
 }
 
 @media screen and (max-width: 1199px) {
@@ -1043,60 +1056,33 @@ input[type=radio] {
     width: 50%;
   }
 }
-.availability {
-  padding-top: 80px;
+.advantages {
   padding-bottom: 80px;
 }
 
-.availability__section {
+.advantages-steps {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 60px;
 }
 
-.availability__list {
+.advantages-steps__list {
+  justify-content: space-between;
+  width: 100%;
   display: flex;
+  gap: 30px;
 }
 
-.availability__info {
-  width: 75%;
+.advantages-steps__item {
+  width: 30%;
 }
 
-.availability .section-subtitle {
-  margin-bottom: 40px;
+.advantages-steps .section-subtitle {
+  margin-bottom: 30px;
 }
 
-.availability__subtitle {
-  font-family: var(--title-font);
-  font-size: 16px;
-  text-transform: uppercase;
-  color: var(--accent-color);
-  margin-bottom: 20px;
-  font-weight: 700;
-}
-
-@media screen and (max-width: 1199px) {
-  .availability__img {
-    transform: scale(0.75);
-  }
-}
-@media screen and (max-width: 767px) {
-  .availability .section-title {
-    text-align: center;
-  }
-  .availability__section {
-    justify-content: center;
-  }
-  .availability__list {
-    width: 100%;
-    flex-flow: column;
-    gap: 40px;
-  }
-  .availability__img {
-    display: none;
-  }
-}
 .advantages__list {
-  row-gap: 30px;
+  row-gap: 40px;
   justify-content: space-between;
   display: flex;
   flex-wrap: wrap;
@@ -1107,7 +1093,13 @@ input[type=radio] {
 }
 
 .advantages__subtitle {
-  margin-bottom: 20px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.advantages__image {
+  display: flex;
+  margin: 0 auto 20px;
 }
 
 @media screen and (max-width: 1199px) {
@@ -1116,7 +1108,177 @@ input[type=radio] {
   }
 }
 @media screen and (max-width: 767px) {
+  .advantages-steps .section-title {
+    text-align: center;
+  }
+  .advantages-steps__section {
+    justify-content: center;
+  }
+  .advantages-steps__list {
+    width: 100%;
+    flex-flow: column;
+    gap: 40px;
+  }
+  .advantages-steps__item {
+    width: 100%;
+  }
   .advantages__item {
     width: 100%;
+  }
+}
+.contact {
+  background: linear-gradient(180deg, #191f32 2.92%, #305e8a 49.72%, #4aa7f0 97.41%);
+  padding-top: 60px;
+  padding-bottom: 120px;
+  position: relative;
+}
+
+.contact__background-img {
+  background-image: url(/images/contact-decor.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0px;
+  pointer-events: none;
+}
+
+.contact__container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.contact .section-title {
+  margin-bottom: 20px;
+}
+
+.contact__call {
+  color: var(--secondary-text-color);
+  font-size: 18px;
+}
+
+@media screen and (max-width: 767px) {
+  .contact__container {
+    display: flex;
+    flex-flow: column;
+    gap: 60px;
+  }
+}
+.values {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.values__description {
+  margin-bottom: 60px;
+}
+
+.values__list {
+  display: flex;
+  gap: 30px;
+  margin-bottom: 60px;
+}
+
+.values__svg {
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+.values__text {
+  font-size: 12px;
+  text-align: center;
+}
+
+.values h3 {
+  margin-bottom: 30px;
+}
+
+.values__box {
+  display: flex;
+  gap: 60px;
+}
+
+@media screen and (max-width: 1199px) {
+  .values__list {
+    gap: 20px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .values__list {
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .values__item {
+    width: 45%;
+  }
+  .values__box {
+    flex-flow: column;
+  }
+}
+.payment {
+  background: linear-gradient(180deg, #191f32 2.92%, #305e8a 49.72%, #4aa7f0 97.41%);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.payment__list {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 767px) {
+  .payment__list {
+    justify-content: space-around;
+    gap: 30px;
+    flex-wrap: wrap;
+  }
+}
+.reviews {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.reviews__list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.reviews__item {
+  width: 15%;
+}
+
+.reviews__logo {
+  width: 100%;
+}
+
+.reviews__svg {
+  display: flex;
+  width: 100%;
+}
+
+.reviews__link {
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+}
+
+.reviews__svg--box {
+  margin: 0 0 0 auto;
+}
+
+@media screen and (max-width: 1199px) {
+  .reviews__list {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 767px) {
+  .reviews__list {
+    gap: 60px;
+  }
+  .reviews__item {
+    width: 40%;
   }
 }/*# sourceMappingURL=main.css.map */
