--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -39,7 +39,7 @@
 
 .footer__subtitle {
   font-family: var(--title-font);
-  font-style: 14px;
+  font-size: 16px;
   font-weight: 700;
   // font-weight: 800;
   color: var(--secondary-text-color);
@@ -147,6 +147,7 @@
 .footer-payment > .footer__subtitle {
   width: 70px;
   align-items: center;
+  font-size: 14px;
 }
 
 @media screen and (max-width: 1199px) {
