--- a/css/main.css
+++ b/css/main.css
@@ -207,7 +207,7 @@ img {
     color: var(--primary-text-color);
   }
   .dropdown__button--open ~ .dropdown__menu {
-    max-height: 25rem;
+    max-height: 35rem;
   }
   .dropdown__button {
     padding-left: 0;
@@ -247,6 +247,9 @@ img {
 
 .page-header {
   background-color: var(--secondary-background-color);
+  position: sticky;
+  top: -60px;
+  z-index: 10;
 }
 
 .topbar {
@@ -413,6 +416,9 @@ img {
   }
 }
 @media screen and (max-width: 767px) {
+  .page-header {
+    top: 0;
+  }
   .topbar {
     display: none;
   }
@@ -427,10 +433,11 @@ img {
   }
   .mobile-menu {
     position: fixed;
+    overflow-y: scroll;
     left: 0;
-    top: 80px;
+    top: 71px;
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 71px);
     background: linear-gradient(180deg, #191f32 2.92%, #305e8a 49.72%, #4aa7f0 97.41%);
     z-index: 1;
     opacity: 0;
@@ -1148,6 +1155,7 @@ input[type=radio] {
 .contact__container {
   display: flex;
   justify-content: space-around;
+  position: relative;
 }
 
 .contact .section-title {
@@ -1280,5 +1288,104 @@ input[type=radio] {
   }
   .reviews__item {
     width: 40%;
+  }
+}
+.couverage {
+  padding-bottom: 80px;
+}
+
+.couverage .section-title {
+  margin-bottom: 0;
+}
+
+.couverage__content {
+  align-items: center;
+  display: flex;
+  gap: 60px;
+}
+
+.couverage__description {
+  width: 40%;
+}
+
+.couverage__map {
+  width: 60%;
+  position: relative;
+}
+
+.couverage__svg {
+  width: 100%;
+}
+
+.couverage__marker {
+  position: absolute;
+  transform-origin: bottom;
+}
+.couverage__marker:hover {
+  animation: pulsate-bck 0.5s ease-in-out infinite both;
+}
+
+.couverage__marker--kyiv {
+  top: 16%;
+  right: 6%;
+}
+
+.couverage__marker--amsterdam {
+  top: 9%;
+  right: 35%;
+}
+
+.couverage__marker--seattle {
+  bottom: 57%;
+  left: 3%;
+}
+
+@keyframes pulsate-bck {
+  0% {
+    transform: scale(1.2);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
+  }
+}
+.couverage__description:has(.couverage__item--kyiv:hover) ~ .couverage__map .couverage__marker--kyiv,
+.couverage__description:has(.couverage__item--amsterdam:hover) ~ .couverage__map .couverage__marker--amsterdam,
+.couverage__description:has(.couverage__item--seattle:hover) ~ .couverage__map .couverage__marker--seattle {
+  animation: pulsate-bck 0.5s ease-in-out infinite both;
+}
+
+.couverage__list {
+  display: flex;
+  flex-flow: column;
+}
+
+.couverage__item {
+  cursor: pointer;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.couverage__name {
+  align-items: center;
+  gap: 10px;
+  display: flex;
+}
+
+@media screen and (max-width: 1199px) {
+  .couverage__content {
+    gap: 30px;
+    flex-flow: column;
+  }
+  .couverage__description {
+    width: 100%;
+  }
+  .couverage__map {
+    width: 100%;
+  }
+  .couverage .section-title {
+    margin-bottom: 30px;
   }
 }/*# sourceMappingURL=main.css.map */
