--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -26,8 +26,7 @@
 .contact__container {
   display: flex;
   justify-content: space-around;
-  //   padding-right: 150px;
-  //   padding-left: 150px;
+  position: relative;
 }
 
 .contact .section-title {
