--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,4 @@
 @import "./components/values";
 @import "./components/payment";
 @import "./components/reviews";
+@import "./components/couverage";
