--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,8 @@
 .page-header {
   background-color: var(--secondary-background-color);
+  position: sticky;
+  top: -60px;
+  z-index: 10;
 }
 
 .topbar {
@@ -193,6 +196,10 @@
 }
 
 @media screen and (max-width: 767px) {
+  .page-header {
+    top: 0;
+  }
+
   .topbar {
     display: none;
   }
@@ -209,10 +216,11 @@
 
   .mobile-menu {
     position: fixed;
+    overflow-y: scroll;
     left: 0;
-    top: 80px;
+    top: 71px;
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 71px);
     background: linear-gradient(
       180deg,
       #191f32 2.92%,
