--- a/css/main.css
+++ b/css/main.css
@@ -596,6 +596,14 @@ img {
   display: block;
 }
 
+input[type=radio] {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+}
+
 .services {
   padding-bottom: 80px;
 }
