--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -12,14 +12,14 @@
   display: block;
 }
 
-// input[type="radio"] {
-//   opacity: 0;
-//   position: absolute;
-//   top: 0;
-//   left: 0;
+input[type="radio"] {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 
-//   margin: 0;
-// }
+  margin: 0;
+}
 
 .services {
   padding-bottom: 80px;
