--- a/css/main.css
+++ b/css/main.css
@@ -32,9 +32,9 @@ img {
   margin-right: auto;
   box-sizing: border-box;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 375px) {
   .container {
-    width: 480px;
+    width: 375px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -199,6 +199,9 @@ img {
 }
 
 @media screen and (max-width: 767px) {
+  .section-title {
+    font-size: 24px;
+  }
   .dropdown__link {
     color: var(--secondary-text-color);
     transition: color var(--timing-function), background-color var(--timing-function);
@@ -332,7 +335,7 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 0 15px 0;
+  padding: 10px 0 10px 0;
 }
 
 .navbar__list {
@@ -460,6 +463,9 @@ img {
   .mobile-menu .navbar__list {
     flex-flow: column;
   }
+  .navbar {
+    padding: 5px 0 5px 0;
+  }
 }
 .hero {
   position: relative;
@@ -573,15 +579,33 @@ img {
     display: none;
   }
 }
-@media screen and (max-width: 767px) {
-  .hero__buttons {
-    flex-flow: column;
-  }
-}
 .slider__controls {
   display: none;
 }
 
+@media screen and (max-width: 767px) {
+  .hero {
+    padding-top: 20px;
+    padding-bottom: 100px;
+  }
+  .hero__buttons {
+    flex-flow: column;
+  }
+  .hero__title {
+    font-size: 26px;
+    margin-bottom: 0;
+  }
+  .hero__image {
+    transform: scale(0.7);
+  }
+  .hero__description {
+    font-size: 16px;
+  }
+  .hero__buttons {
+    align-items: center;
+    gap: 20px;
+  }
+}
 #serversContent,
 #hostingContent,
 #cloudContent,
@@ -802,7 +826,10 @@ input[type=radio] {
     flex-wrap: wrap;
   }
   .services-vps__item {
-    width: 45%;
+    width: 200px;
+  }
+  .services-vps__item a {
+    width: 100%;
   }
 }
 .faq {
@@ -885,6 +912,13 @@ input[type=radio] {
     width: 100%;
   }
 }
+@media screen and (max-width: 767px) {
+  .faq {
+    position: relative;
+    padding-bottom: 60px;
+    padding-top: 30px;
+  }
+}
 .footer {
   background-color: var(--secondary-background-color);
   padding: 40px 0;
@@ -956,6 +990,7 @@ input[type=radio] {
 .footer-contacts__phone {
   color: var(--secondary-text-color);
   font-style: normal;
+  margin-bottom: 20px;
   text-transform: uppercase;
 }
 
@@ -997,9 +1032,14 @@ input[type=radio] {
 }
 
 .footer-payment {
-  display: flex;
   min-width: 45%;
+  display: flex;
+  gap: 10px;
   justify-content: space-between;
+  align-items: center;
+}
+
+.footer-payment__item {
   align-items: center;
 }
 
@@ -1010,17 +1050,9 @@ input[type=radio] {
   margin-top: 30px;
 }
 
-.footer-payment__link {
-  width: 60px;
-  height: 40px;
-  background-color: var(--primary-background-color);
-  display: flex;
-  align-items: center;
-  border-radius: 10px;
-}
-
 .footer-payment__img {
-  margin: 0 auto;
+  width: 60px;
+  height: 45px;
 }
 
 .footer-payment > .footer__subtitle {
@@ -1056,11 +1088,31 @@ input[type=radio] {
     flex-flow: column;
     gap: 30px;
   }
+  .footer-contacts__list {
+    flex-flow: column;
+    margin-bottom: 30px;
+  }
   .footer-payment {
+    row-gap: 20px;
+    flex-wrap: wrap;
     width: 100%;
   }
   .footer-social__list {
     width: 50%;
+  }
+  .footer__box {
+    width: 30%;
+  }
+  .footer-social__list {
+    width: 70%;
+    margin: 0 auto;
+  }
+  .footer-payment__item {
+    width: 30%;
+  }
+  .footer-payment__item {
+    display: flex;
+    justify-content: center;
   }
 }
 .advantages {
@@ -1168,10 +1220,18 @@ input[type=radio] {
 }
 
 @media screen and (max-width: 767px) {
+  .contact {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
   .contact__container {
     display: flex;
     flex-flow: column;
     gap: 60px;
+    align-items: center;
+  }
+  .contact__call {
+    text-align: center;
   }
 }
 .values {
@@ -1179,50 +1239,74 @@ input[type=radio] {
   padding-bottom: 80px;
 }
 
+.values__box {
+  display: flex;
+  align-items: center;
+  gap: 60px;
+}
+
+.values__content--1 {
+  width: 60%;
+  display: flex;
+  flex-flow: column;
+  gap: 30px;
+}
+
+.values__content--2 {
+  width: 40%;
+}
+
 .values__description {
-  margin-bottom: 60px;
+  margin-bottom: 30px;
 }
 
 .values__list {
   display: flex;
-  gap: 30px;
-  margin-bottom: 60px;
+  flex-flow: column;
+  gap: 20px;
 }
 
-.values__svg {
-  margin: 0 auto;
-  margin-bottom: 30px;
+.values__item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .values__text {
+  width: 70%;
   font-size: 12px;
-  text-align: center;
 }
 
 .values h3 {
   margin-bottom: 30px;
 }
 
-.values__box {
-  display: flex;
-  gap: 60px;
-}
-
 @media screen and (max-width: 1199px) {
   .values__list {
-    gap: 20px;
+    gap: 30px;
+  }
+  .values__content--1 {
+    width: 100%;
+  }
+  .values__content--2 {
+    width: 100%;
   }
 }
 @media screen and (max-width: 767px) {
+  .values {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
   .values__list {
     flex-wrap: wrap;
     justify-content: space-around;
   }
-  .values__item {
-    width: 45%;
-  }
   .values__box {
     flex-flow: column;
+    gap: 30px;
+  }
+  .values h3 {
+    margin-bottom: 10px;
   }
 }
 .payment {
@@ -1237,8 +1321,12 @@ input[type=radio] {
 }
 
 @media screen and (max-width: 767px) {
+  .payment {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
   .payment__list {
-    justify-content: space-around;
+    justify-content: space-between;
     gap: 30px;
     flex-wrap: wrap;
   }
@@ -1283,6 +1371,10 @@ input[type=radio] {
   }
 }
 @media screen and (max-width: 767px) {
+  .reviews {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
   .reviews__list {
     gap: 60px;
   }
@@ -1326,13 +1418,13 @@ input[type=radio] {
 }
 
 .couverage__marker--kyiv {
-  top: 16%;
-  right: 6%;
+  top: 11%;
+  right: 40%;
 }
 
 .couverage__marker--amsterdam {
-  top: 9%;
-  right: 35%;
+  top: 5%;
+  right: 58%;
 }
 
 .couverage__marker--seattle {
@@ -1387,5 +1479,10 @@ input[type=radio] {
   }
   .couverage .section-title {
     margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .couverage {
+    padding-bottom: 30px;
   }
 }/*# sourceMappingURL=main.css.map */
