--- a/sass/components/_faq.scss
+++ b/sass/components/_faq.scss
@@ -89,3 +89,11 @@
     width: 100%;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .faq {
+    position: relative;
+    padding-bottom: 60px;
+    padding-top: 30px;
+  }
+}
