--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -108,7 +108,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 0 15px 0;
+  padding: 10px 0 10px 0;
 }
 
 .navbar__list {
@@ -251,5 +251,9 @@
     .navbar__list {
       flex-flow: column;
     }
+  }
+
+  .navbar {
+    padding: 5px 0 5px 0;
   }
 }
