--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -122,12 +122,34 @@
   }
 }
 
+.slider__controls {
+  display: none;
+}
+
 @media screen and (max-width: 767px) {
+  .hero {
+    padding-top: 20px;
+    padding-bottom: 100px;
+  }
   .hero__buttons {
     flex-flow: column;
   }
-}
 
-.slider__controls {
-  display: none;
+  .hero__title {
+    font-size: 26px;
+    margin-bottom: 0;
+  }
+
+  .hero__image {
+    transform: scale(0.7);
+  }
+
+  .hero__description {
+    font-size: 16px;
+  }
+
+  .hero__buttons {
+    align-items: center;
+    gap: 20px;
+  }
 }
