--- a/sass/components/_reviews.scss
+++ b/sass/components/_reviews.scss
@@ -39,6 +39,11 @@
 }
 
 @media screen and (max-width: 767px) {
+  .reviews {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
   .reviews__list {
     gap: 60px;
   }
