--- a/sass/components/_faq.scss
+++ b/sass/components/_faq.scss
@@ -46,7 +46,7 @@
     color: var(--accent-color);
   }
 
-  &:focus + .accordion__info {
+  &:focus ~ .accordion__info {
     max-height: 4rem;
   }
 
