--- a/sass/base/_utils.scss
+++ b/sass/base/_utils.scss
@@ -286,6 +286,7 @@ img {
   }
 
   .dropdown__menu {
+    background-color: rgba(255, 255, 255, 0.1);
     width: 100%;
     display: block;
     position: relative;
