--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -229,7 +229,7 @@
     );
     z-index: 1;
     opacity: 0;
-    // transform: translateY(-100%);
+    padding-top: 30px;
     transition: transform var(--timing-function), opacity var(--timing-function);
     pointer-events: none;
 
