--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -8,7 +8,7 @@
   );
 
   padding-top: 40px;
-  padding-bottom: 200px;
+  padding-bottom: 120px;
 }
 
 .hero__background-img {
@@ -88,8 +88,9 @@
 }
 
 .slider__controls {
-  position: relative;
-  z-index: 1;
+  display: none;
+  // position: relative;
+  // z-index: 1;
 }
 
 @media screen and (max-width: 1199px) {
@@ -120,10 +121,6 @@
   .hero__title--nowrap {
     display: none;
   }
-}
-
-.slider__controls {
-  display: none;
 }
 
 @media screen and (max-width: 767px) {
