--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,5 @@
 @import "./components/payment";
 @import "./components/reviews";
 @import "./components/couverage";
+
+@import "./components/swiper";
