--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -94,6 +94,10 @@
 }
 
 @media screen and (max-width: 1199px) {
+  .hero {
+    padding-bottom: 75px;
+  }
+
   .hero__thumb {
     display: flex;
     order: 2;
@@ -126,7 +130,7 @@
 @media screen and (max-width: 767px) {
   .hero {
     padding-top: 20px;
-    padding-bottom: 100px;
+    padding-bottom: 60px;
   }
   .hero__buttons {
     flex-flow: column;
