--- a/css/main.css
+++ b/css/main.css
@@ -492,7 +492,7 @@ img {
 }
 
 .hero__background-img {
-  background-image: url(/images/hero-decor.svg);
+  background-image: url(./images/hero-decor.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
