--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -12,7 +12,7 @@
 }
 
 .hero__background-img {
-  background-image: url(/images/hero-decor.svg);
+  background-image: url(./images/hero-decor.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
