--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -8,11 +8,11 @@
   );
 
   padding-top: 40px;
-  padding-bottom: 120px;
+  padding-bottom: 100px;
 }
 
 .hero__background-img {
-  background-image: url(./images/hero-decor.svg);
+  background-image: url(/images/hero-decor.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -26,6 +26,7 @@
   display: flex;
   flex-flow: column;
   position: relative;
+  justify-content: space-between;
 }
 
 .hero__title {
@@ -47,6 +48,9 @@
 }
 
 .hero__info {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
   order: 1;
   width: 60%;
 }
@@ -68,24 +72,24 @@
   width: 30%;
   order: 2;
 }
-.hero__svg {
-  min-width: fit-content;
-}
+// .hero__svg {
+//   min-width: fit-content;
+// }
 
-.slider__viewbox {
-  overflow: hidden;
-}
+// .slider__viewbox {
+//   overflow: hidden;
+// }
 
-.slider-content {
-  display: flex;
-  flex-wrap: nowrap;
-  transition: transform var(--timing-function);
-}
+// .slider-content {
+//   display: flex;
+//   flex-wrap: nowrap;
+//   transition: transform var(--timing-function);
+// }
 
-.slider__container {
-  width: 100%;
-  flex-shrink: 0;
-}
+// .slider__container {
+//   width: 100%;
+//   flex-shrink: 0;
+// }
 
 .slider__controls {
   display: none;
