--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -12,7 +12,7 @@
 }
 
 .contact__background-img {
-  background-image: url(/images/contact-decor.svg);
+  background-image: url(../images/contact-decor.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
